# fork-ops

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  pyproject.toml
.agents/plugins/: marketplace.json
docs/agents/: domain.md  fork-ops-32-equipment-migration-case-study.md
plugins/fork-ops/: .mcp.json  README.md  pyproject.toml
plugins/fork-ops/.codex-plugin/: plugin.json
plugins/fork-ops/docs/: config-schema.md  migration.md  operation-guide.md
plugins/fork-ops/scripts/: fork_ops_cli.py  fork_ops_mcp.py
plugins/fork-ops/skills/fork-ops/: SKILL.md
plugins/fork-ops/src/fork_ops/: __init__.py  cli.py  core.py  fork-ops.schema.json  mcp_server.py  schema.py  workflow_catalog.py
plugins/fork-ops/tests/: test_core.py
specs/fork-ops-foundation/: capability-card.md  config-model.md  domain-map.md  interface-decision-record.md  migration-pressure-cases.md
specs/fork-ops-foundation/examples/: track-aware.toml
