[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fork-ops"
version = "0.1.0"
description = "Agentic operations for maintained repository forks."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "nisavid", email = "nisavid@users.noreply.github.com" }
]
dependencies = [
  "jsonschema>=4.20"
]

[project.optional-dependencies]
mcp = [
  "mcp>=1.12.4"
]

[dependency-groups]
dev = [
  "mypy>=1.18",
  "pytest>=8.0",
  "ruff>=0.14",
  "types-jsonschema>=4.25"
]

[project.scripts]
fork-ops = "fork_ops.cli:main"
fork-ops-mcp = "fork_ops.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
cache-dir = ".ruff_cache"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
files = ["src", "tests"]
cache_dir = ".mypy_cache"
